--- a/admin/admin.css
+++ b/admin/admin.css
@@ -1,8 +1,13 @@
-html,
-body {
-    height: 100%;
+html, body {
     margin: 0;
-    background: #eee;
+    padding: 0;
+    height: 100%;
+    overflow: hidden; /* tránh scroll toàn trang */
+    font-family: sans-serif;
+}
+#Administrators {
+    display: flex;
+    height: 100vh; /* full chiều cao màn hình */
 }
 .boxx {
     display: flex;
@@ -17,19 +22,25 @@ body {
 .containerr{
     flex: 0 100%;
 }
-.menuu{
-    min-width: 200px;
-    float: left;
-    background: #234;
-    box-shadow: 0px 0px 5px 2px #456;
-    width: 15%;
-    height: 100.5%;
+.menuu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 240px;
+    height: 100vh;
+    background-color: #1b2a41; /* hoặc màu bạn đang dùng */
+    overflow-y: auto;
+    z-index: 1000;
+    padding-bottom: 60px;
 }
-.contentt{
-    min-width: 700px;
-    float: left;
-    width: 84.7%;
-    height: 100.5%;
+.contentt {
+    margin-left: 240px; /* bằng width của .menuu */
+    width: calc(100% - 240px);
+    height: 100vh;
+    overflow-y: auto;
+    background-color: #f9f9f9;
+    display: flex;
+    flex-direction: column;
 }
 .menu-conten{
     line-height: 30px;
@@ -66,9 +77,10 @@ body {
 .line-menu-lv2:hover{
     background: #0062cc;
 }
-.container-conten{
-    width: 100%;
-    height: 96%;
+.container-conten {
+    padding: 20px;
+    flex-grow: 1;
+    background-color: #fff;
 }
 .box-login{
     position:absolute;
